[package]
name = "asura-cp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "missing_number"
path = "cses/missing_number.rs"

[[bin]]
name = "increasing_array"
path = "cses/increasing_array.rs"

[[bin]]
name = "number_spiral"
path = "cses/number_spiral.rs"

[[bin]]
name = "permutations"
path = "cses/permutations.rs"

[[bin]]
name = "repetitions"
path = "cses/repetitions.rs"

[[bin]]
name = "weird_algorithm"
path = "cses/weird_algorithm.rs"

[[bin]]
name = "two_knignts"
path = "cses/two_knignts.rs"
